--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/assets/styles/sass/main.sass" />
-    <title>Sadman</title>
+    <title>M A Muquit | Cloud Native Software Engineer</title>
   </head>
 
   <body>
